@@ -52,13 +52,13 @@ allprojects {
   
   ext {
     commonsLangVersion = "3.8.1"
-    equalsverifierVersion = "3.0.2"
+    equalsverifierVersion = "3.1.4"
     fulcrumVersion = "0.28.0"
-    hdrhistogramVersion = "2.1.10"
+    hdrhistogramVersion = "2.1.11"
     junitVersion = "4.12"
-    hazelcastVersion = "3.11"
+    hazelcastVersion = "3.11.1"
     log4jVersion = "1.2.17"
-    mockitoVersion = "2.23.0"
+    mockitoVersion = "2.23.4"
     slf4jVersion = "1.7.25"
     yconfVersion = "0.13.0"
     zerologVersion = "0.24.0"
@@ -164,31 +164,6 @@ dependencies {
   compile "com.obsidiandynamics.zerolog:zerolog-core:${zerologVersion}"
   compile "com.obsidiandynamics.zerolog:zerolog-bridge-hazelcast:${zerologVersion}"
 }
-
-project.ext.set("launcherClasspath", new org.gradle.api.internal.file.UnionFileCollection())
-project.ext.set("launcherClasses", new ArrayList())
-
-task addLauncherApps() {
-  project(":").launcherClasspath += sourceSets.main.runtimeClasspath + sourceSets.test.runtimeClasspath
-}
-/*
-task launch() {
-  dependsOn allprojects*.tasks*.findByName("testClasses")
-  doLast {
-    def baseJvmArgs = "-XX:-MaxFDLimit -XX:+TieredCompilation -XX:+UseNUMA -XX:+UseCondCardMark " + 
-                      "-XX:-UseBiasedLocking -Xms2G -Xmx2G -Xss1M -XX:+UseG1GC -XX:MaxGCPauseMillis=200 " + 
-                      "-XX:InitiatingHeapOccupancyPercent=0 -Djava.net.preferIPv4Stack=true " + 
-                      "-Dlauncher.package.compress.level=3"
-    javaexec {
-      systemProperties = System.properties
-      classpath = project(":").launcherClasspath
-      main = "com.obsidiandynamics.launcher.Launcher"
-      args = project(":").launcherClasses
-      jvmArgs = Arrays.asList baseJvmArgs.split(" ")
-      standardInput = System.in
-    }
-  }
-}*/
 
 jar {
   baseName packageName
